--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -8,23 +8,22 @@ on:
 
 jobs:
   rescan:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          path: 'C:\Users\JKM\Documents\Cast_Software\G\SOURCES\Shopizer'  # Specify the local path where you want to checkout the code
       
-      - name: Set up Java
+      - name: Set up Java 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'  # Specify the Java version
           distribution: 'adopt'  # Specify the distribution (e.g., adopt, openjdk)
-          server-id: github
-          server-username: ${{ github.actor }}
-          server-password: ${{ github.token }}
       
       - name: Rescan Application
         env:
           AIP_CONSOLE_USERNAME: admin
           AIP_CONSOLE_PASSWORD: admin
         run: |
-          java -jar JAR/aip-console-tools-cli.jar add --application SHOPIZER --console-url http://localhost:8081 -f C:/Users/JKM/Documents/Cast_Software/G/SOURCES/Shopizer.zip --username ${{ env.admin }} --password ${{ env.admin }}
+          java -jar JAR/aip-console-tools-cli.jar add --application SHOPIZER --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" --console-url http://localhost:8081 -f C:/Users/JKM/Documents/Cast_Software/G/SOURCES/Shopizer.zip --username ${{ env.admin }} --password ${{ env.admin }}
