--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -16,7 +16,6 @@ jobs:
       - name: Copy repository to target directory
         run: |
           robocopy D:\a\Shopizer\Shopizer C:\Users\JKM\Documents\Cast_Software\G\SOURCES\Shopizer /E /IS
-
       
       - name: Set up Java 11
         uses: actions/setup-java@v2
@@ -26,8 +25,8 @@ jobs:
       
       - name: Rescan Application
         env:
-          AIP_CONSOLE_USERNAME: admin
-          AIP_CONSOLE_PASSWORD: admin
+          AIP_CONSOLE_USERNAME: ${{ secrets.AIP_CONSOLE_USERNAME }}
+          AIP_CONSOLE_PASSWORD: ${{ secrets.AIP_CONSOLE_PASSWORD }}
         run: |
           cd C:/Users/JKM/Documents/Cast_Software/G/SOURCES/Shopizer
-          java -jar JAR/aip-console-tools-cli.jar add --application SHOPIZER --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" --console-url http://localhost:8081 -f C:/Users/JKM/Documents/Cast_Software/G/SOURCES/Shopizer.zip --username ${{ env.admin }} --password ${{ env.admin }}
+          java -jar JAR/aip-console-tools-cli.jar rescan --application SHOPIZER --console-url http://localhost:8081 --username ${{ env.AIP_CONSOLE_USERNAME }} --password ${{ env.AIP_CONSOLE_PASSWORD }}
