--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -15,7 +15,7 @@ jobs:
         
       - name: Copy repository to target directory
         run: |
-          robocopy D:\a\Shopizer\Shopizer C:\Users\JKM\Documents\Cast_Software\G\SOURCES\Shopizer /E /IS
+          robocopy D:\a\Shopizer\Shopizer C:\Users\JKM\Documents\Cast_Software\G\SOURCES\Shopizer /E /IS /LOG:C:\robocopy_logs\robocopy_log.txt
       
       - name: Set up Java 11
         uses: actions/setup-java@v2
