--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -12,13 +12,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Create log directory
-        run: mkdir C:\robocopy_logs
-
-      - name: Run robocopy
-        run: robocopy ${{ github.workspace }} C:\Users\JKM\Documents\Cast_Software\G\SOURCES\Shopizer /E /IS /LOG:C:\robocopy_logs\robocopy_log.txt /NP /NFL /NDL /TEE
-      
+        with:
+          path: 'C:\Shopizer'
+          
       - name: Set up Java 11
         uses: actions/setup-java@v2
         with:
