--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: 'C:\Shopizer'  # Checkout code into C:\Shopizer directory
+          fetch-depth: 0  # Fetch complete history including all branches and tags
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
