--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -10,11 +10,14 @@ jobs:
   rescan:
     runs-on: windows-latest
     steps:
+      - name: Create symbolic link
+        run: |
+          mklink /D D:\a\Shopizer\Shopizer C:\Shopizer
+
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: 'C:\Shopizer'  # Checkout code into C:\Shopizer directory
-          fetch-depth: 0  # Fetch complete history including all branches and tags
+          path: 'D:\a\Shopizer\Shopizer'  # Checkout code into the expected directory
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
