--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -10,19 +10,10 @@ jobs:
   rescan:
     runs-on: windows-latest
     steps:
-      - name: Create symbolic link if not exists
-        shell: powershell
-        run: |
-          if (!(Test-Path -Path "D:\a\Shopizer\Shopizer")) {
-              cmd /c mklink /D D:\a\Shopizer\Shopizer C:\Shopizer
-          } else {
-              Write-Output "Symbolic link already exists."
-          }
-
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: 'D:\a\Shopizer\Shopizer'  # Checkout code into the expected directory
+          path: 'C:\Shopizer'  # Specify the path where you want to check out the repository
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
@@ -35,5 +26,4 @@ jobs:
           AIP_CONSOLE_USERNAME: admin  # Assuming AIP_CONSOLE_USERNAME is stored in GitHub Secrets
           AIP_CONSOLE_PASSWORD: admin  # Assuming AIP_CONSOLE_PASSWORD is stored in GitHub Secrets
         run: |
-          cd D:\a\Shopizer\Shopizer
           java -jar JAR/aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" --n SHOPIZER --console-url http://localhost:8081 -f C:\Shopizer --username ${{ env.AIP_CONSOLE_USERNAME }} --password ${{ env.AIP_CONSOLE_PASSWORD }}
