--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -13,16 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: 'D:\a\Shopizer\Shopizer'  # Checkout into the expected directory structure
-
-      - name: Create symbolic link if not exists
-        shell: powershell
-        run: |
-          if (!(Test-Path -Path "C:\Shopizer")) {
-              cmd /c mklink /D C:\Shopizer D:\a\Shopizer\Shopizer
-          } else {
-              Write-Output "Symbolic link already exists."
-          }
+          path: 'C:\Shopizer'
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
