--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -12,18 +12,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          path: 'C:\Shopizer'
+
+      - name: Create symbolic link to C:\Shopizer
+        run: mklink /D D:\a\Shopizer\Shopizer C:\Shopizer
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'  # Specify the Java version
-          distribution: 'adopt'  # Specify the distribution (e.g., adopt, openjdk)
-      
+          java-version: '11'
+          distribution: 'adopt'
+
       - name: Rescan Application
         env:
-          AIP_CONSOLE_USERNAME: admin  # Assuming AIP_CONSOLE_USERNAME is stored in GitHub Secrets
-          AIP_CONSOLE_PASSWORD: admin  # Assuming AIP_CONSOLE_PASSWORD is stored in GitHub Secrets
+          AIP_CONSOLE_USERNAME: admin
+          AIP_CONSOLE_PASSWORD: admin
         run: |
           java -jar JAR/aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" --n SHOPIZER --console-url http://localhost:8081 -f C:\Shopizer --username ${{ env.AIP_CONSOLE_USERNAME }} --password ${{ env.AIP_CONSOLE_PASSWORD }}
