--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create symbolic link to C:\Shopizer
-        run: mklink /D D:\a\Shopizer\Shopizer C:\Shopizer
+        run: New-Item -ItemType SymbolicLink -Path 'D:\a\Shopizer\Shopizer' -Name 'Shopizer' -Value 'C:\Shopizer' -Force
 
       - name: Set up Java 11
         uses: actions/setup-java@v2
