--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v2
         
       - name: List directory contents
-        run: ls -al JAR
-        
-      - name: Set up Java 11
+        shell: powershell
+        run: Get-ChildItem -Path JAR
+      
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'adopt'
 
       - name: Rescan Application
         run: |
