--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -23,9 +23,6 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-        env:
-          BASE_API_URL: http://172.19.192.1:8081
-
       - name: Rescan Application
         run: |
-          java -jar aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" -n "SHOPIZER" --server-url="${{ secrets.BASE_API_URL }}" -f "\\jkmlap1\VMWINShare\SOURCES\Shopizer.zip" --verbose=false --set-as-current=true
+          java -jar aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" -n "SHOPIZER" --server-url="http://172.19.192.1:8081" -f "\\jkmlap1\VMWINShare\SOURCES\Shopizer.zip" --verbose=false --set-as-current=true
