--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -23,6 +23,11 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Verify network connectivity
+        run: |
+          ping 172.19.192.1 -c 5  # Ping the server to check connectivity
+          telnet 172.19.192.1 8081  # Attempt to connect to the server on port 8081
+
       - name: Rescan Application
         run: |
           java -jar aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" -n "SHOPIZER" --server-url="http://172.19.192.1:8081" -f "\\jkmlap1\VMWINShare\SOURCES\Shopizer.zip" --verbose=false --set-as-current=true
