--- a/.github/workflows/rescan.yml
+++ b/.github/workflows/rescan.yml
@@ -25,9 +25,9 @@ jobs:
 
       - name: Verify network connectivity
         run: |
-          ping https://629a-115-99-190-68.ngrok-free.app  # Ping the server to check connectivity
+          ping https://3f3f-115-99-190-68.ngrok-free.app  # Ping the server to check connectivity
           curl --head --fail --silent --show-error http://172.19.192.1:8081  # Check HTTP connectivity
 
       - name: Rescan Application
         run: |
-          java -jar aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" -n "SHOPIZER" --server-url="https://629a-115-99-190-68.ngrok-free.app" -f "\\jkmlap1\VMWINShare\SOURCES\Shopizer.zip" --verbose=false --set-as-current=true
+          java -jar aip-console-tools-cli.jar add --apikey="8uENrFd8.p7IwCkQbaGoMRR79s5TTSyxTGnskl9N8" -n "SHOPIZER" --server-url="https://3f3f-115-99-190-68.ngrok-free.app" -f "\\jkmlap1\VMWINShare\SOURCES\Shopizer.zip" --verbose=false --set-as-current=true
